Adjust button width in CSS to prevent collapse

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -195,5 +195,5 @@ a {
     font-weight: bold;
     text-align: center;
     cursor: pointer;
-    max-width: 7rem;
+    max-width: 8rem;
 }
